# coconet

./: .gitignore  AUTHORS  AUTHORS.en  AUTHORS.es  CONTRIBUTE  CONTRIBUTE.en  CONTRIBUTE.es  ChangeLog  INSTALL.en  INSTALL.es  Makefile.am  NEWS  README  README.en  README.es  TODO  TODO.en  TODO.en.org  TODO.es  TODO.es.org  TODO.org  TRANSLATORS  TRANSLATORS.es  bootstrap  configure.ac  configure.in  download.html  index.html  style.css
debian/: README.Debian  changelog  coconet-default.ex  coconet.doc-base.EX  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/es/: documentacion.odt  documentacion.sxw  manual de codigo.odt  manual de odigo.sxw  manual de usuario.odt  manual de usuario.sxw  manual tecnico.odt  manual tecnico.sxw
doc/images/: arquitectura  desarrollar  dfd-nivel1  dfd-nivel2.1  dfd-nivel2.2  dfd-nivel3  dfd-nivel4.1  dfd-nivel4.2  diagrama de contexto  nodulo  pobl_nodulos  pobl_redes  ponderacion  red  transf_param
doc/mover/: anteproyecto.abw  anteproyecto.odt  articulo.odt  articulo.sxw  disenaeo general del proye.doc  manual de codigo_old.odt  manual de codigo_old.sxw  practica4.doc  practica4.odt  presentacion.odp  presentacion.sxi
doc/mover/pruebas/: cancer.sh  glass.sh  heart.sh  mcancer.txt  medias.sxc  medias2.sxc  mglass.txt  mheart.txt  mnew.txt  mpima.txt  new.sh  pima.sh  salidascancer.tar  salidasglass.tar  salidasheart.tar  salidasnew-thyroid.tar  salidaspima.tar  scancer.txt  sglass.txt  sheart.txt  snew-thyroid.txt  spima.txt
examples/: conf.txt  threads.c
examples/cancer/: cancer.gen  cancer.train
examples/glass/: glass.gen  glass.train
examples/heart/: heart.gen  heart.train
examples/new-thyroid/: new-thyroid.gen  new-thyroid.train
examples/pima/: pima.gen  pima.train
include/: definiciones.h  definitions.h  funciones.h  functions.h  macros.h
po/: .gitignore  Makefile.am  Makevars  POTFILES.in  coconet.pot  en.po  es.po
scripts/: update_gettext.sh
src/: .gitignore  Makefile.am  Makefile.am.old  crearpoblaciones.c  createPopulations.c  error.c  evolucionarpoblaciones.c  evolvePopulations.c  ficheros.c  files.c  freeMemory.c  generarsalida.c  generateOutput.c  imprimir.c  liberarmemoria.c  main.c  math.c  measureAptitude.c  measureChange.c  mediraptitud.c  medircambio.c  mutacionestructural.c  mutation.c  ordenar.c  print.c  sort.c  utils.c
tests/: .gitignore  Makefile.am  main.c  suites.h  test.c  utils.c
